# LightTodo

./: .gitignore  CHANGELOG.md  GIT_COMMIT_STANDARD.md  LICENSE  PROJECT_INIT.md  README.md  TESTING.md  clear-icon-cache.bat  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  reset_sync.sql  test-ime.html  vite.config.ts  vitest.config.ts
.claude/: settings.json
docs/: DEVELOPMENT.md  DEVELOPMENT_TAURI.md  INTEGRATION_COMPLETE.md  REACT_GRAB.md  RELEASE_STANDARD.md  SCHEDULE.md  SETUP.md
e2e/: groups.spec.ts  system-tray.spec.ts  todo-operations.spec.ts
src/: App.tsx  main.tsx  setupTests.ts  styles.css  styles.css.d.ts  test-utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sync.rs  webdav.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/windows/: nsis-hooks.nsh
src/features/notes/components/: NoteCard.tsx  NoteEditor.tsx  NotesList.tsx  SearchBar.tsx  SimpleMarkdown.tsx
src/features/notes/hooks/: useGroups.test.ts  useGroups.ts  useNotes.test.ts  useNotes.ts
src/features/notes/stores/: notesStore.test.ts  notesStore.ts
src/features/notes/types/: index.ts
src/features/notes/utils/: deadline.test.ts  deadline.ts  simpleMarkdown.test.ts  simpleMarkdown.ts  timeFormat.ts
src/features/sync/: WebDAVSettings.tsx  api.test.ts  api.ts
