[package]
name = "lighttodo"
version = "0.2.0"
description = "A lightweight note-taking app with WebDAV sync"
authors = ["jaridli"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
parking_lot = "0.12"
dirs = "5.0"
reqwest = { version = "0.12", features = ["rustls-tls"] }
roxmltree = "0.20"
base64 = "0.22"
regex = "1"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
